--- a/src/html/absence.html
+++ b/src/html/absence.html
@@ -13,16 +13,18 @@
 <header>
   <div class="banner">
     <img id="logo" src="../ressource/cpnv.png">
-    <i class="fas fa-bars fa-5x menu"></i>
+
   </div>
 </header>
+
 <body>
 <div class="mobile">
   <div class="title">
     <div>Classe SI-T1A</div>
     <div>Lundi 13 Septembre</div>
   </div>
-  <div class="line"></div>
+  <br>
+  <div class="greenRectangle"></div>
   <div class="centered">
     <section class="cards">
       <a id="eleve1" onclick="changeColor(this)" class="card">
@@ -79,7 +81,6 @@
     </section>
   </div>
 </div>
-
 <div class="desktop">
   <div class="title">
     <div>Classe SI-T1A</div>
