finished the teacher calendar

--- a/src/html/calendarTeacher.html
+++ b/src/html/calendarTeacher.html
@@ -5,8 +5,9 @@
     <title>Title</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="../js/script.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-    <link rel="stylesheet" href="../css/absenceCss.css">
+    <script src="../js/timetableUtil.js"></script>
+    <script crossorigin="anonymous" src="https://kit.fontawesome.com/9797ce1060.js"></script>
+    <link href="../css/absenceCss.css" rel="stylesheet">
     <link href="../css/style.css" rel="stylesheet">
 </head>
 <body>
@@ -49,7 +50,7 @@
                     <li class="events-group">
                         <div class="top-info"><span>Lu 01.11</span></div>
                         <ul>
-                            <li class="single-event" data-content="GUI1" data-end="10:30"
+                            <li class="single-event" data-content="TeacherGUI1" data-end="10:30"
                                 data-event="event-1"
                                 data-start="09:30">
                                 <a href="#0">
@@ -57,7 +58,7 @@
                                     <em class="event-info">SC-C332 Mottier André</em>
                                 </a>
                             </li>
-                            <li class="single-event" data-content="GUI1" data-end="12:15"
+                            <li class="single-event" data-content="TeacherGUI1" data-end="12:15"
                                 data-event="event-1"
                                 data-start="10:45">
                                 <a href="#0">
@@ -65,7 +66,7 @@
                                     <em class="event-info">SC-C332 Mottier André</em>
                                 </a>
                             </li>
-                            <li class="single-event" data-content="GUI1" data-end="15:55"
+                            <li class="single-event" data-content="TeacherGUI1" data-end="15:55"
                                 data-event="event-1"
                                 data-start="13:30">
                                 <a href="#0">
@@ -80,7 +81,7 @@
                         <div class="top-info"><span>Ma 02.11</span></div>
 
                         <ul>
-                            <li class="single-event" data-content="GUI1" data-end="10:30"
+                            <li class="single-event" data-content="TeacherGUI1" data-end="10:30"
                                 data-event="event-1"
                                 data-start="09:30">
                                 <a href="#0">
@@ -88,7 +89,7 @@
                                     <em class="event-info">SC-C332 Mottier André</em>
                                 </a>
                             </li>
-                            <li class="single-event" data-content="GUI1" data-end="12:15"
+                            <li class="single-event" data-content="TeacherGUI1" data-end="12:15"
                                 data-event="event-1"
                                 data-start="10:45">
                                 <a href="#0">
@@ -96,7 +97,7 @@
                                     <em class="event-info">SC-C332 Mottier André</em>
                                 </a>
                             </li>
-                            <li class="single-event" data-content="GUI1" data-end="15:55"
+                            <li class="single-event" data-content="TeacherGUI1" data-end="15:55"
                                 data-event="event-1"
                                 data-start="13:30">
                                 <a href="#0">
@@ -110,7 +111,7 @@
                     <li class="events-group">
                         <div class="top-info"><span>Me 03.11</span></div>
                         <ul>
-                            <li class="single-event" data-content="GUI1" data-end="10:30"
+                            <li class="single-event" data-content="TeacherGUI1" data-end="10:30"
                                 data-event="event-1"
                                 data-start="09:30">
                                 <a href="#0">
@@ -118,7 +119,7 @@
                                     <em class="event-info">SC-C332 Mottier André</em>
                                 </a>
                             </li>
-                            <li class="single-event" data-content="GUI1" data-end="12:15"
+                            <li class="single-event" data-content="TeacherGUI1" data-end="12:15"
                                 data-event="event-1"
                                 data-start="10:45">
                                 <a href="#0">
@@ -126,7 +127,7 @@
                                     <em class="event-info">SC-C332 Mottier André</em>
                                 </a>
                             </li>
-                            <li class="single-event" data-content="GUI1" data-end="15:55"
+                            <li class="single-event" data-content="TeacherGUI1" data-end="15:55"
                                 data-event="event-1"
                                 data-start="13:30">
                                 <a href="#0">
@@ -140,7 +141,7 @@
                     <li class="events-group">
                         <div class="top-info"><span>Je 04.11</span></div>
                         <ul>
-                            <li class="single-event" data-content="GUI1" data-end="10:30"
+                            <li class="single-event" data-content="TeacherGUI1" data-end="10:30"
                                 data-event="event-1"
                                 data-start="09:30">
                                 <a href="#0">
@@ -148,7 +149,7 @@
                                     <em class="event-info">SC-C332 Mottier André</em>
                                 </a>
                             </li>
-                            <li class="single-event" data-content="GUI1" data-end="12:15"
+                            <li class="single-event" data-content="TeacherGUI1" data-end="12:15"
                                 data-event="event-1"
                                 data-start="10:45">
                                 <a href="#0">
@@ -156,7 +157,7 @@
                                     <em class="event-info">SC-C332 Mottier André</em>
                                 </a>
                             </li>
-                            <li class="single-event" data-content="GUI1" data-end="15:55"
+                            <li class="single-event" data-content="TeacherGUI1" data-end="15:55"
                                 data-event="event-1"
                                 data-start="13:30">
                                 <a href="#0">
@@ -169,7 +170,7 @@
                     <li class="events-group">
                         <div class="top-info"><span>Ve 05.11</span></div>
                         <ul>
-                            <li class="single-event" data-content="GUI1" data-end="10:30"
+                            <li class="single-event" data-content="TeacherGUI1" data-end="10:30"
                                 data-event="event-1"
                                 data-start="09:30">
                                 <a href="#0">
@@ -177,7 +178,7 @@
                                     <em class="event-info">SC-C332 Mottier André</em>
                                 </a>
                             </li>
-                            <li class="single-event" data-content="GUI1" data-end="12:15"
+                            <li class="single-event" data-content="TeacherGUI1" data-end="12:15"
                                 data-event="event-1"
                                 data-start="10:45">
                                 <a href="#0">
@@ -185,7 +186,7 @@
                                     <em class="event-info">SC-C332 Mottier André</em>
                                 </a>
                             </li>
-                            <li class="single-event" data-content="GUI1" data-end="15:55"
+                            <li class="single-event" data-content="TeacherGUI1" data-end="15:55"
                                 data-event="event-1"
                                 data-start="13:30">
                                 <a href="#0">
@@ -199,7 +200,7 @@
                     <li class="events-group">
                         <div class="top-info"><span>Sa 06.11</span></div>
                         <ul>
-                            <li class="single-event" data-content="GUI1" data-end="10:30"
+                            <li class="single-event" data-content="TeacherGUI1" data-end="10:30"
                                 data-event="event-1"
                                 data-start="09:30">
                                 <a href="#0">
@@ -207,7 +208,7 @@
                                     <em class="event-info">SC-C332 Mottier André</em>
                                 </a>
                             </li>
-                            <li class="single-event" data-content="GUI1" data-end="12:15"
+                            <li class="single-event" data-content="TeacherGUI1" data-end="12:15"
                                 data-event="event-1"
                                 data-start="10:45">
                                 <a href="#0">
@@ -215,7 +216,7 @@
                                     <em class="event-info">SC-C332 Mottier André</em>
                                 </a>
                             </li>
-                            <li class="single-event" data-content="GUI1" data-end="15:55"
+                            <li class="single-event" data-content="TeacherGUI1" data-end="15:55"
                                 data-event="event-1"
                                 data-start="13:30">
                                 <a href="#0">
@@ -233,7 +234,6 @@
                         <span class="event-date"></span>
                         <h3 class="event-name"></h3>
                     </div>
-
                     <div class="header-bg"></div>
                 </header>
 
@@ -252,15 +252,15 @@
         <div class="cards">
             <a class="card">
                 <div><span class="fontGreen">GUI1 / </span>08:00-09:35</div>
-                <div align="right">SC-C332 <br> Mottier André</div>
+                <div align="right"><i class="fas fa-clock fa-2x"></i><br>SC-C332 <br> Mottier André</div>
             </a>
             <a class="card">
                 <div><span class="fontGreen">GUI1 / </span>08:00-09:35</div>
-                <div align="right">SC-C332 <br> Mottier André</div>
+                <div align="right"><i class="fas fa-clock fa-2x"></i><br>SC-C332 <br> Mottier André</div>
             </a>
             <a class="card">
                 <div><span class="fontGreen">GUI1 / </span>08:00-09:35</div>
-                <div align="right">SC-C332 <br> Mottier André</div>
+                <div align="right"><i class="fas fa-clock fa-2x"></i><br>SC-C332 <br> Mottier André</div>
             </a>
         </div>
         <h1><span class="fontGreen">Mardi </span> 02.11</h1>
@@ -268,11 +268,11 @@
         <div class="cards">
             <a class="card">
                 <div><span class="fontGreen">GUI1 / </span>08:00-09:35</div>
-                <div align="right">SC-C332 <br> Mottier André</div>
+                <div align="right"><i class="fas fa-clock fa-2x"></i><br>SC-C332 <br> Mottier André</div>
             </a>
             <a class="card">
                 <div><span class="fontGreen">GUI1 / </span>08:00-09:35</div>
-                <div align="right">SC-C332 <br> Mottier André</div>
+                <div align="right"><i class="fas fa-clock fa-2x"></i><br>SC-C332 <br> Mottier André</div>
             </a>
         </div>
     </div>
