--- a/src/html/absence.html
+++ b/src/html/absence.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="banner">
-            <a href="classList.html"><img id="logo" src="../ressource/cpnv.png"></a>
+            <a href="../index.html"><img id="logo" src="../ressource/cpnv.png"></a>
         </div>
     </header>
     <div class="mobile">
