--- a/src/html/calendarTeacher.html
+++ b/src/html/calendarTeacher.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="banner">
-            <a href="classList.html"><img id="logo" src="../ressource/cpnv.png"></a>
+            <a href="../index.html"><img id="logo" src="../ressource/cpnv.png"></a>
         </div>
     </header>
     <div class="title">
