--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="sw.js"></script>
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-    <link href="../css/style.css" rel="stylesheet">
-    <link href="../css/classList.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/classList.css" rel="stylesheet">
 </head>
 <header>
     <div class="banner">
-        <a href="classList.html"><img id="logo" src="../ressource/cpnv.png"></a>
+        <a href="index.html"><img id="logo" src="ressource/cpnv.png"></a>
 
     </div>
 </header>
@@ -24,14 +26,14 @@
     <div class="greenRectangle"></div>
 
     <div class="cards">
-        <a class="classcard" href="calendareleve.html ">
+        <a class="classcard" href="html/calendareleve.html ">
             <div class="bigdiv">
                 <h4><span class="fontGreen">SI-T1a</span></h4>
             </div>
             <div>Nombre d’etudiants<br>Maitre de classe<br>Délégué de classe</div>
             <div align="right">11<br>Nicolas Glassey<br>N/A</div>
         </a>
-        <a class="classcard" href="calendarTeacher.html">
+        <a class="classcard" href="html/calendarTeacher.html">
             <div class="bigdiv">
                 <h4><span class="fontGreen">SI-T1a (Enseigant)</span></h4>
             </div>
@@ -61,4 +63,6 @@
         </a>
     </div>
 </body>
+
+
 </html>
