change links on teacher calendar

--- a/src/html/TeacherGUI1.html
+++ b/src/html/TeacherGUI1.html
@@ -1,5 +1,9 @@
 <div class="cd-schedule-modal event-info">
     <div>
-        pls click here.
+        <a href="absence.html">
+            <button class="bigButton">
+                Gestion d'absences
+            </button>
+        </a>
     </div>
 </div>
