--- a/src/html/calendarTeacher.html
+++ b/src/html/calendarTeacher.html
@@ -9,6 +9,15 @@
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/9797ce1060.js"></script>
     <link href="../css/style.css" rel="stylesheet">
     <link href="../css/calendar.css" rel="stylesheet">
+    <script>
+        document.addEventListener("DOMContentLoaded", function(){
+            //dom is fully loaded, but maybe waiting on images & css files
+        });
+
+        window.addEventListener("load", function(){
+            //everything is fully loaded, don't use me if you can use DOMContentLoaded
+        });
+      </script>
 </head>
 <body>
     <header>
